# belong-be

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
deploy/: setup-swap.sh
deploy/nginx/: belong.conf
src/: gunicorn.conf.py  manage.py
src/apps/ai_profiler/: admin.py  api.py  apps.py  exceptions.py
src/apps/audit/: admin.py
src/apps/authentication/: admin.py  api.py  apps.py  sms.py
src/apps/common/: api.py  api_uploads.py  exceptions.py  schemas.py
src/apps/compliance/: admin.py  api.py  apps.py  exceptions.py
src/apps/feed/: admin.py  api.py  apps.py  exceptions.py
src/apps/funds/: admin.py  api.py  api_playlists.py  apps.py
src/apps/investments/: admin.py  api_goals.py  api_investments.py  api_plans.py  api_portfolio.py  apps.py  exceptions.py
src/apps/kyc/: admin.py  api.py  apps.py  exceptions.py
src/apps/market_data/: admin.py  api.py  apps.py
src/apps/notifications/: admin.py  api.py  apps.py  exceptions.py
src/apps/payments/: admin.py  api_callbacks.py  api_payments.py  api_wallet.py  api_withdrawals.py  apps.py  exceptions.py
src/apps/pools/: admin.py  api.py  apps.py  exceptions.py
src/apps/referrals/: admin.py  api.py  apps.py  exceptions.py
src/apps/simulation/: api.py  apps.py
src/apps/users/: admin.py  api.py
src/apps/wishlist/: admin.py  api.py  apps.py  exceptions.py
src/config/: api_description.py  celery.py  redoc_view.py  urls.py
src/config/settings/: __init__.py  (+11 more)
src/fixtures/: funds.json  profile_templates.json
(+316 files in other folders)
