[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "belong-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "django-ninja>=1.3",
    "django-ninja-jwt>=5.3",
    "psycopg[binary,pool]>=3.2",
    "redis>=5.0",
    "celery[redis]>=5.4",
    "django-environ>=0.11",
    "structlog>=24.0",
    "gunicorn>=22.0",
    "bcrypt>=4.1",
    "django-cors-headers>=4.4",
    "whitenoise>=6.7",
    "django-storages[s3]>=1.14",
    "httpx>=0.27",
    "weasyprint>=62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.5",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "django-extensions>=3.2",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "S", "B", "A",
    "C4", "DJ", "DTZ", "PIE", "PT", "T20", "SIM",
    "RET", "PERF", "ERA", "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"**/migrations/*.py" = ["E501", "ERA"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true
warn_unreachable = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "--strict-markers -v"
